--- a/.github/workflows/report-to-moodle.yml
+++ b/.github/workflows/report-to-moodle.yml
@@ -14,7 +14,7 @@ permissions:
 jobs:
   run-lint:
     if: ${{ !contains(github.actor, 'classroom') }}
-    name: lint-the-changes
+    name: Lint the Code which is committed
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -32,10 +32,10 @@ jobs:
   report-to-moodle:
     needs: run-lint
     if: ${{ !contains(github.actor, 'classroom') }}
-    name: report-to-moodle
+    name: Report to Moodle that Linter was successfully
     runs-on: ubuntu-latest
     steps:
-      - name: export-grade
+      - name: Call FGIT-API and send 1 point to Moodle
         if: always()
         run: |
           curl -X POST "https://it.bzz.ch/fgitapi/gh_grade/${{ github.repository }}/1/1"
